--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="row" class="container-fluid">
 
-    <h3 class="col-7"> Talabat</h3>
+    <h3 class="col-7"> logo</h3>
 
     <div class="col-5" class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/Home" routerLinkActive="router-link-active" >Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/Home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/product">All Product</a>
