--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,19 @@
           <a class="nav-link active" aria-current="page" routerLink="/Home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/product">All Product</a>
+          <a class="nav-link active" aria-current="page" routerLink="/product/product">All Product</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/product/add/addProduct">add product</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/product/details/:id">details</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="product/edit/:id">edit</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="product/delete/:id">delete</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/AboutUs">About</a>
