--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,54 +1,55 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="row" class="container-fluid">
+    <h3 class="col-7">logo</h3>
 
-    <h3 class="col-7"> logo</h3>
-
-    <div class="col-5" class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div
+      class="col-5"
+      class="collapse navbar-collapse"
+      id="navbarSupportedContent"
+    >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/Home">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/Home"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/product/product">All Product</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            routerLink="/product/product"
+            >All Product</a
+          >
+        </li>
+
+        <li class="nav-item">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            routerLink="/product/details/:id"
+            >details</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/product/add/addProduct">add product</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            routerLink="product/edit/:id"
+            >edit</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/product/details/:id">details</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="product/edit/:id">edit</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="product/delete/:id">delete</a>
+          <a
+            class="nav-link active"
+            aria-current="page"
+            routerLink="product/delete/:id"
+            >delete</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/AboutUs">About</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" routerLink="/Home" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Store
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contactUs">Contact Us</a>
-        </li>
       </ul>
-      <form class="col-10"class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
-
   </div>
-
 </nav>
