--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -20,6 +20,9 @@
       <button mat-raised-button color="warn" (click)="toEditPage(pro.id)">
         Edit
       </button>
+      <button mat-raised-button color="warn" (click)="toDeletePage(pro.id)">
+        Delete
+      </button>
     </mat-card-content>
   </mat-card>
 </div>
